packages/svelte/tests/compiler-errors/samples/unbalanced-curly-component/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'attribute_invalid_expression',
		message: 'Invalid attribute expression',
		position: [101, 116]
	}
});
